# SWE1D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct
CMake/: Findcatch2.cmake
Documentation/: Doxyfile
Source/: CMakeLists.txt  Main.cpp
Source/Blocks/: WavePropagationBlock.cpp  WavePropagationBlock.hpp
Source/Scenarios/: DamBreakScenario.cpp  DamBreakScenario.hpp
Source/Tools/: Args.cpp  Args.hpp  Logger.cpp  Logger.hpp  RealType.hpp
Source/Writers/: ConsoleWriter.cpp  ConsoleWriter.hpp  VTKWriter.cpp  VTKWriter.hpp
Tests/: AugRieSolverTest.cpp  CMakeLists.txt  TestCase.cpp
src/: SConscript  WavePropagation.cpp  WavePropagation.h  main.cpp  solvers  types.h
src/scenarios/: dambreak.h
src/solvers/: FWave.hpp  WavePropagation.hpp
src/tools/: args.cpp  args.h  logger.cpp  logger.h
src/writer/: ConsoleWriter.h  VtkWriter.h
